force-app/main/default/objects/FSAM_Maintenance_Visit__c/FSAM_Maintenance_Visit__c.object-meta.xml
<CustomObject>
    <label>FSAM Maintenance Visit</label>
    <nameField>
        <displayFormat>VIS-{00000}</displayFormat>
        <label>Visit Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSAM Maintenance Visits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>