force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Actual_End__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Actual_End__c</fullName>
    <description>Actual date and time when the maintenance activity ended.</description>
    <inlineHelpText>Enter the actual completion date and time.</inlineHelpText>
    <label>Actual End</label>
    <type>DateTime</type>
</CustomField>