force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Actual_Start__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Actual_Start__c</fullName>
    <description>Actual date and time when the maintenance activity started.</description>
    <inlineHelpText>Enter the actual start date and time.</inlineHelpText>
    <label>Actual Start</label>
    <type>DateTime</type>
</CustomField>