force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Engineer__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service engineer who performed the maintenance visit.</description>
    <inlineHelpText>Select the engineer who performed this maintenance activity.</inlineHelpText>
    <label>Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>FSAM_Maintenance_Visits</relationshipName>
    <type>Lookup</type>
</CustomField>