force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Engineer_Notes__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Engineer_Notes__c</fullName>
    <description>Additional observations recorded by the service engineer.</description>
    <inlineHelpText>Enter any additional technical observations or follow-up information.</inlineHelpText>
    <label>Engineer Notes</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>