force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Scheduled_End__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Scheduled_End__c</fullName>
    <description>Scheduled completion date and time of the maintenance visit.</description>
    <inlineHelpText>Enter the planned completion date and time.</inlineHelpText>
    <label>Scheduled End</label>
    <type>DateTime</type>
</CustomField>