force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Scheduled_Start__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Scheduled_Start__c</fullName>
    <description>Scheduled start date and time of the maintenance visit.</description>
    <inlineHelpText>Enter the planned start date and time.</inlineHelpText>
    <label>Scheduled Start</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>