force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Service_Request__c</fullName>
    <description>Service request associated with this maintenance visit.</description>
    <label>Service Request</label>
    <referenceTo>FSAM_Service_Request__c</referenceTo>
    <relationshipLabel>FSAM Maintenance Visits</relationshipLabel>
    <relationshipName>FSAM_Maintenance_Visits</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>