force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Visit_Status__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Visit_Status__c</fullName>
    <description>Current status of the maintenance visit.</description>
    <inlineHelpText>Select the current status of this maintenance visit.</inlineHelpText>
    <label>Visit Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>