force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Visit_Type__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Visit_Type__c</fullName>
    <description>Indicates whether the maintenance activity was performed on-site or remotely.</description>
    <inlineHelpText>Select how the maintenance service was delivered.</inlineHelpText>
    <label>Visit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>On-Site</fullName>
            </value>
            <value>
                <fullName>Remote Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>