force-app/main/default/objects/FSAM_Maintenance_Visit__c/fields/FSAM_Work_Performed__c.field-meta.xml
<CustomField>
    <fullName>FSAM_Work_Performed__c</fullName>
    <description>Detailed description of maintenance, diagnostic, or repair work performed during the visit.</description>
    <inlineHelpText>Describe the diagnosis, maintenance, repairs, or other work performed.</inlineHelpText>
    <label>Work Performed</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>