force-app/main/default/objects/FSAM_Maintenance_Visit__c/validationRules/FSAM_VR_Actual_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Actual_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(FSAM_Actual_Start__c)),
    NOT(ISBLANK(FSAM_Actual_End__c)),
    FSAM_Actual_End__c &lt; FSAM_Actual_Start__c
)</errorConditionFormula>
    <errorDisplayField>FSAM_Actual_End__c</errorDisplayField>
    <errorMessage>Actual End cannot be earlier than Actual Start.</errorMessage>
</ValidationRule>