force-app/main/default/objects/FSAM_Maintenance_Visit__c/validationRules/FSAM_VR_Completed_Visit.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Completed_Visit</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(FSAM_Visit_Status__c, &quot;Completed&quot;),
    OR(
        ISBLANK(FSAM_Actual_Start__c),
        ISBLANK(FSAM_Actual_End__c),
        ISBLANK(FSAM_Work_Performed__c)
    )
)</errorConditionFormula>
    <errorMessage>Actual Start, Actual End, and Work Performed are required when completing a maintenance visit.</errorMessage>
</ValidationRule>