force-app/main/default/objects/FSAM_Maintenance_Visit__c/validationRules/FSAM_VR_Engineer_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Engineer_Required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(FSAM_Engineer__c)</errorConditionFormula>
    <errorDisplayField>FSAM_Engineer__c</errorDisplayField>
    <errorMessage>Please assign an engineer before saving the maintenance visit.</errorMessage>
</ValidationRule>