force-app/main/default/objects/FSAM_Maintenance_Visit__c/validationRules/FSAM_VR_Scheduled_Dates.validationRule-meta.xml
<ValidationRule>
    <fullName>FSAM_VR_Scheduled_Dates</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(FSAM_Scheduled_End__c)),
    FSAM_Scheduled_End__c &lt; FSAM_Scheduled_Start__c
)</errorConditionFormula>
    <errorDisplayField>FSAM_Scheduled_End__c</errorDisplayField>
    <errorMessage>Scheduled End cannot be earlier than Scheduled Start.</errorMessage>
</ValidationRule>