force-app/main/default/objects/FSAM_Maintenance_Visit__c/listViews/Completed_Visits.listView-meta.xml
<ListView>
    <fullName>Completed_Visits</fullName>
    <columns>NAME</columns>
    <columns>FSAM_Engineer__c</columns>
    <columns>FSAM_Actual_End__c</columns>
    <columns>FSAM_Work_Performed__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSAM_Visit_Status__c</field>
        <operation>equals</operation>
        <value>Completed</value>
    </filters>
    <label>Completed Visits</label>
</ListView>