force-app/main/default/objects/FSAM_Maintenance_Visit__c/listViews/In_Progress_Visits.listView-meta.xml
<ListView>
    <fullName>In_Progress_Visits</fullName>
    <columns>NAME</columns>
    <columns>FSAM_Engineer__c</columns>
    <columns>FSAM_Scheduled_Start__c</columns>
    <columns>FSAM_Actual_Start__c</columns>
    <columns>FSAM_Visit_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSAM_Visit_Status__c</field>
        <operation>equals</operation>
        <value>In Progress</value>
    </filters>
    <label>In Progress Visits</label>
</ListView>