force-app/main/default/objects/FSAM_Maintenance_Visit__c/listViews/Upcoming_Visits.listView-meta.xml
<ListView>
    <fullName>Upcoming_Visits</fullName>
    <columns>NAME</columns>
    <columns>FSAM_Engineer__c</columns>
    <columns>FSAM_Scheduled_Start__c</columns>
    <columns>FSAM_Visit_Type__c</columns>
    <columns>FSAM_Service_Request__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSAM_Visit_Status__c</field>
        <operation>equals</operation>
        <value>Scheduled</value>
    </filters>
    <label>Upcoming Visits</label>
</ListView>